chore: More alignment fixes

--- a/apps/client/src/app/modules/gearsets/stats-popup/stats-popup.component.less
+++ b/apps/client/src/app/modules/gearsets/stats-popup/stats-popup.component.less
@@ -9,4 +9,5 @@ table, th, td {
 
 .value {
   text-align: right;
+  width: 100px;
 }
