--- a/apps/client/src/app/pages/gearset/gearset-display/gearset-display.component.less
+++ b/apps/client/src/app/pages/gearset/gearset-display/gearset-display.component.less
@@ -24,6 +24,7 @@
 
 .amount {
   text-align: right;
+  width: 100px;
 }
 
 .table-cell {
